# recruiting-sw-telemetry-project-2

./: .gitignore  CMakeLists.txt  Logger.h  StateMachine.cpp  StateMachine.h  build.sh  check_statuses.cpp  check_statuses.h  common.h  data_converter.cpp  data_converter.h  data_processing.cpp  data_processing.h  file.txt  main.cpp  main_old.cpp  makefile  readme.md  state_functions.cpp  state_functions.h  thread_functions.cpp  thread_functions.h  types.h  unixTime.cpp  unixTime.h
include/: check_statuses.h  common.h  data_converter.h  data_processing.h  state_functions.h  thread_functions.h  types.h  unixTime.h
src/: check_statuses.cpp  data_converter.cpp  data_processing.cpp  state_functions.cpp  thread_functions.cpp  unixTime.cpp
